--- a/CommentSet/src/main/resources/templates/index.html
+++ b/CommentSet/src/main/resources/templates/index.html
@@ -1,36 +1,62 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html  class="x-admin-sm" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" type="text/css" href="./lib/layui/css/layui.css"/>
-    <link rel="stylesheet" href="./css/index.css">
-    <script src="./lib/layui/layui.js" type="text/javascript" charset="utf-8"></script>
-    <script src="./js/index.js"></script>
-    <title>短句集后台管理</title>
+	<meta charset="UTF-8">
+	<title>登录</title>
+	<meta name="renderer" content="webkit|ie-comp|ie-stand">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
+    <meta http-equiv="Cache-Control" content="no-siteapp" />
+    <link rel="stylesheet" th:href="@{/css/font.css}">
+    <link rel="stylesheet" th:href="@{/css/index.css}">
+	  <link rel="stylesheet" th:href="@{/css/xadmin.css}">
+    <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script th:src="@{/lib/layui/layui.js}" charset="utf-8"></script>
+    <!--[if lt IE 9]>
+      <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
+      <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
-
-<body>
-<div class="head">
-    <h1>短句集后台管理</h1>
-</div>
-
-<!-- 圣物 -->
-<script type="text/html" id="commentToolbar">
-    <div class="layui-btn-container">
-        <button class="layui-btn layui-btn-sm layui-btn-d" lay-event="batchDelete">批量删除</button>
+<body class="login-bg">
+    <div class="login layui-anim layui-anim-up">
+        <div class="message">登录</div>
+        <div id="darkbannerwrap"></div>
+        <form method="post" class="layui-form">
+            <input name="username" placeholder="用户名"  type="text" lay-verify="required" class="layui-input" >
+            <hr class="hr15">
+            <input name="password" lay-verify="required" placeholder="密码"  type="password" class="layui-input">
+            <hr class="hr15">
+            <input value="登录" lay-submit lay-filter="login" style="width:100%;" type="submit">
+            <hr class="hr20" >
+        </form>
     </div>
-</script>
 
-<script type="text/html" id="commentBar" lay-filter='commentBar'>
-    <a class="layui-btn layui-btn-xs layui-btn-primary" lay-event="comment-info">内容详情</a>
-    <a class="layui-btn layui-btn-xs layui-btn-warm" lay-event="delete-comment">删除</a>
-</script>
+    <script>
+        $(function () {
+            layui.use('form', function(){
+                var form = layui.form;
+                //监听提交
+                form.on('submit(login)', function(data){
+                    $ = layui.$
+                    $.ajax({
+                        url:"/user/login",
+                        type: "POST",
+                        data : data.field,
+                        success: function(result){
+                            if(result.extend.user != null){
+                                layer.msg("登录成功")
+                                window.setTimeout(function (){ window.location.href =
+                                    "/workbench/index.html"}, 1000)
+                            } else {
+                                layer.msg("登录失败")
+                            }
+                        }
+                    })
+                    return false;
+                });
+            });
 
-<!-- 主界面 -->
-<div class="main">
-    <table lay-filter='comment' class="layui-hide" id="comment"></table>
-</div>
-
+        })
+    </script>
 </body>
 </html>
